fix scrollbars
hides these scrollbars
https://i.imgur.com/Crw4IjJ.png

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -27,7 +27,7 @@ table, td, th {
 li, td {
   border: none;
   font-size: 20px;
-  overflow-x: hidden;
+  overflow: hidden;
   white-space: nowrap;
 }
 td {
